# ashtrader

./: .gitignore  README.org  package-lock.json  package.json  svelte.config.js  tailwind.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/kraken/: mod.rs
src-tauri/src/sec/: mod.rs
src-tauri/src/user/: mod.rs
src/lib/: index.ts
src/lib/components/: AddKrakenKey.svelte  Buy.svelte  Footer.svelte  Ledger.svelte  Loading.svelte  Login.svelte  Market.svelte  Nav.svelte  Portfolio.svelte  PortfolioTable.svelte  Registration.svelte  Sell.svelte  Table.svelte  Unlock.svelte
src/lib/components/plot/: Crosshair.svelte  GridLines.svelte  Line.svelte  LineChart.svelte  Point.svelte  XAxis.svelte
src/lib/components/settings/: AddKraken.svelte  ChangeEmail.svelte  ChangePassword.svelte  ChangeTheme.svelte  LoadingSettings.svelte  RemoveKrakenKeys.svelte  Welcome.svelte
src/lib/loaders/: AddKrakenLoader.svelte  ChangeEmailLoader.svelte  ChangePasswordLoader.svelte  ChartLoader.svelte  LoginLoader.svelte  MarketLoader.svelte  RegistrationLoader.svelte  RemoveKrakenLoader.svelte  TableLoader.svelte  UnlockLoader.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/addAsh/: +page.svelte
src/routes/addKraken/: +page.svelte
src/routes/donate/: +page.svelte
src/routes/login/: +page.svelte
src/routes/market/: +page.svelte
src/routes/portfolio/: +page.svelte
src/routes/register/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/unlock/: +page.svelte
