[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[lib]
name = "lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "dialog-message", "dialog-confirm", "dialog-ask"] }
reqwest = { version = "0.11.25", features = ["json"] }
anyhow = "1.0.80"
toml = "0.8.10"
directories = "5.0.1"
argon2 = "0.5.3"
hex = "0.4.3"
orion = "0.17.6"
chrono = "0.4.35"
base64 = "0.22.0"
hmac = "0.12.1"
sha2 = "0.10.8"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_derive = "1.0.197"
rand = "0.8.5"
phf = "0.11.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
